# wViewer

./: .gitignore  LICENSE  README.md  alembic.ini  build-deb.sh  pyproject.toml
alembic/: env.py
alembic/versions/: feedd4f3c1a7_initial_schema.py
debian/: wviewer.desktop
tests/: test_colors.py  test_health.py  test_imports_api.py  test_imports_history.py  test_models.py  test_networks_api.py  test_parser.py  test_smoke.py  test_table_api.py
wviewer/: __main__.py  app.py  colors.py  db.py  models.py  parser.py
wviewer/routers/: imports.py  networks.py
wviewer/static/: app.js  index.html  style.css
